name:                ivory-tower-keeper
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/ivory-tower-keeper
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/ivory-tower-keeper.git

library
  exposed-modules:
    Network.API.Telegram.Bot.Keeper.Configuration
    Network.API.Telegram.Bot.Keeper.Server
  build-depends: base == 4.*, async, tagged, transformers, lens, text, warp,
    servant, servant-server, optparse-applicative, stm, wreq, telega
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs

executable bot
  main-is: Network/API/Telegram/Bot/Main.hs
  other-modules:
    Network.API.Telegram.Bot.Keeper.Configuration
    Network.API.Telegram.Bot.Keeper.Server
  build-depends: ivory-tower-keeper, base == 4.*, async, tagged, transformers, lens, text, warp, servant,
    servant-server, optparse-applicative, stm, wreq, telega
  default-extensions: GeneralizedNewtypeDeriving, NoImplicitPrelude, LambdaCase,
    OverloadedStrings, StandaloneDeriving, TypeApplications, ViewPatterns,
    ScopedTypeVariables, TypeOperators, DataKinds, PackageImports
  ghc-options: -Wall -fno-warn-tabs
